Fix small dark mode issues

--- a/assets/_globalCss.css
+++ b/assets/_globalCss.css
@@ -3,8 +3,6 @@
 
 :root {
   --color-background: rgb(255 255 255);
-  --color-background-sidebar: rgb(248 248 248);
-  --color-background-navbar: rgb(240 240 240);
   --color-foreground: rgb(0 0 0);
   --color-disabled: rgb(128 128 128);
   --color-selection: rgb(255 240 170);
@@ -15,12 +13,12 @@
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --color-background: rgb(25 25 25);
-    --color-background-sidebar: rgb(10 10 10);
-    --color-background-navbar: rgb(5 5 5);
+    --color-background: rgb(0 0 0);
     --color-foreground: rgb(255 255 255);
     --color-disabled: rgb(128 128 128);
     --color-selection: rgb(255 240 170);
+    --color-background-alpha: hsl(0deg 0% 3%);
+    --color-background-beta: hsl(0deg 0% 6%);
   }
 }
 
